samples/_failures_safe/1761199415_3c1467_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09543570.c: In function ‘main’:
./samples/SAFE/__tmp_09543570.c:141:5: error: expected expression at end of input
  141 |     if (decompressed_size ==
      |     ^~
./samples/SAFE/__tmp_09543570.c:141:5: error: expected declaration or statement at end of input
